	(1.7.6)
	Small bug fixes
	Fix memory leaks
	Prepare alignment evaluation functionality
	Code cleanup/refactorizations
	(1.7.6.9)
	Introduce configuration header config.h
	Fix man page dependency problem

May/Jun, 2013
	Make sure that make check and make distcheck work
	Split RnaData into RnaData and RnaEnsemble
	Introduce new version of pp format (2.0)
	Read/write of inloop probabilities
	Cleaner separation of reading/writing of alignments/probability data v.s. computation;
	  in particulare remove I/O from Alignment class
	Cleaner handling of gaps, alignment edges, and gap symbols in I/O
	New option --stopwatch (in locarna*) to turn on detailed internal timing
	Change class Sequence to be a mere interface to MultipleAlignment that allows operator [] for column access
	Make constraints optional part of multiple alignments; make write/readable with the alignment in clustal and pp format
	Remove options anchorA, anchorB from locarna and locarna_X
	Support anchor and structure annotation in MultipleAlignment
	RnaEnsemble constrains the folding by structure annotation of
	Multiple Alignment (if given)
	(Release 1.7.7)
Jul, 2013
	Support precomputing in loop probabilities for SPARSE
	Fixed reading of PP 2.0
	(Release 1.7.8)
Sep 2013
	LocARNATE: new code, improvements
	Exparna-P: Suboptimal traceback and improvements
	Change default behavior of mlocarna for sequence-local alignment: proceed
	with only-local subalignments; options local-progressive and
	global-progressive control behavior, where --global-progressive
	reactivates the previous one.
	(Release 1.7.9)
Oct 2013
	Newick bugfix
	Small modifications for library use (e.g. for carna)
	(Release 1.7.10)
Nov 2013
	Improve max-diff heuristic (without reference alignment): make
	symmetric and always allow sufficiently large deviation
	(Release 1.7.11)
	Fix bug in locarna_rnafold_pp (reading clustalw from stdin)
	Fix bug concerning structure constraints
	Update format conversions in mlocarna to pp 2.0 format