@@ -79,15 +79,19 @@ namespace LocARNA {
 	
 	// ----------------------------------------
 	// METHODS
+	/** 
+	 * @brief initialize from fixed structure
+	 * 
+	 * @param structure fixed structure
+	 */
+	void
+	init_from_fixed_structure(const SequenceAnnotation &structure);
 
 	/** 
 	 * @brief initialize from rna ensemble 
 	 * 
 	 * @param rna_ensemble rna ensemble
 	 * @param stacking whether to initialize stacking terms
-	 * 
-	 * @note can be overloaded to initialize with additional
-	 * information (in loop probabilities)
 	 */
 	void
 	init_from_rna_ensemble(const RnaEnsemble &rna_ensemble,
